fix: Fixing layout of User Profile view (table rows too long on mobile)
Constraining user post table rows to fit within mobile view (they were causing the view to be too wide, resulting in the user avatar section displaying off-screen)
Also adjusting the spacing between user badges on mobile

--- a/modules/ept-frontend/client/scss/ept/views/public/_profile.scss
+++ b/modules/ept-frontend/client/scss/ept/views/public/_profile.scss
@@ -239,7 +239,8 @@ profile {
         margin-bottom: 1.5rem;
 
         h1,
-        .username-screen {
+        .username-screen,
+        .user-role {
           margin-bottom: 0.25rem;
         }
       }
@@ -509,6 +510,7 @@ profile {
       display: flex;
       flex-direction: column;
       padding: 0.5rem 0;
+      width: calc(100vw - 2rem);
 
       td {
         padding: 0;
